[package]
name = "st_file"
version = "0.1.0"
edition = "2021"
authors = ["Jojii Jojii ät gmx.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
memmap2 = { version = "0.5.5", optional = true }
bincode = {version = "*", optional=true}

[features]
default = ["typed"]
mapped = ["memmap2"]
typed = ['bincode']
