[package]
name = "st_file"
version = "0.1.0"
edition = "2021"
authors = ["Jojii Jojii ät gmx.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
mmarinus = { version = "0.4.0", optional = true }
bincode = { version = "1.3.3", optional = true }

[features]
default = ["typed","mapped"]
mapped = ["mmarinus"]
typed = ['bincode']
